DE6447 - fixes table wrapping

--- a/app/shared/components/my-performance-table/my-performance-table.component.scss
+++ b/app/shared/components/my-performance-table/my-performance-table.component.scss
@@ -165,10 +165,11 @@ tr.two-right-columns-present {
 .performance-table-summary {
   background-color: $gray-4;
   border-bottom: 2px solid $gray-8;
+  box-shadow: inset -8px 0 15px rgba(0, 0, 0, 0.05);
   font-family: $rajdhani;
-  height: 70px;
+  height: 55px;
   min-width: $table-width;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
 .total-row {
